# RPIPicoWSNTP

./: CMakeLists.txt  README.md
port/lwip/: lwipopts.h
src/: CMakeLists.txt  main.cpp
